# LiberPrimus-GPU

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CIPHER_CATALOG.md  CMakeLists.txt  CONTRIBUTING.md  CUDA_NOTES.md  ChatGPT-ContextFile.md  DATASET.md  EXPERIMENTS.md  Launch-Operator-Console.bat  README.md  RESEARCH.md  RESULTS_SCHEMA.md  ROADMAP.md  SECURITY.md  STATUS.md  TESTING.md  pyproject.toml  requirements-dev.txt
.codex/: hooks.json
.codex/agents/: closeout-reviewer.toml  current-truth-auditor.toml  doc-drift-auditor.toml
.codex/hooks/: doc_staleness_preflight.py  hook_common.py  session_start_current_truth_context.py  session_start_dispatcher.py  stop_doc_staleness_guard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_source_report.yml  documentation_task.yml  feature_request.yml  research_task.yml
.github/workflows/: ci.yml
cmake/: CudaConfig.cmake  ProjectOptions.cmake  README.md  Warnings.cmake
cuda/: CMakeLists.txt  README.md
cuda/benchmarks/: README.md
cuda/include/libreprimus/: cuda_smoke.cuh  gematria_shift_score_kernel.cuh  prime_minus_one_stream_kernel.cuh  shift_score_kernel.cuh
cuda/kernels/: cuda_smoke.cu  gematria_shift_score_kernel.cu  prime_minus_one_stream_kernel.cu  shift_score_kernel.cu
cuda/tests/: CMakeLists.txt  cuda_smoke_test.cpp  gematria_shift_score_kernel_test.cpp  gematria_shift_score_stage5m_runner.cpp  prime_minus_one_bounded_p56_stage5ad_test.cpp  prime_minus_one_stream_kernel_test.cpp  shift_score_kernel_test.cpp
data/: README.md
data/benchmarks/: stage4q-cpu-benchmark-plan.yaml  stage4q-cuda-parity-readiness.yaml
data/ci/: stage5ax-guardrail.yaml  stage5ax-parallel-command-registry.yaml  stage5ax-parallel-run-policy.yaml  stage5ax-parallel-validation-plan.yaml  stage5ax-parallel-validation-run-summary.yaml  stage5ax-parallel-validation-safety-audit.yaml  stage5ax-pytest-shard-plan.yaml  stage5dy-nonmutating-validator-regression.yaml  stage5dy-parallel-validation-shard-policy.yaml  stage5dy-validation-profile-baseline.yaml
data/cuda/: stage5a-cuda-implementation-gates.yaml  stage5a-cuda-non-targets.yaml  stage5a-cuda-parity-scaffold.yaml  stage5a-cuda-planning-summary.yaml  stage5a-cuda-target-plan.yaml  stage5aa-prime-minus-one-cuda-device-subset-audit.yaml  stage5aa-prime-minus-one-cuda-synthetic-kernel-implementation.yaml  (+211 more)
deep-research-content-packs/: README.md
deep-research-repo-zips/: README.md
docker/: README.md
docs/: README.md
experiments/: README.md
human-review-packs/: README.md
research-inputs/: README.md
research-log/: 2026-05-15-stage-0a-bootstrap.md  2026-05-16-stage-0c-legacy-pastebin-ingestion.md  2026-05-16-stage-0d-followup-alignment-gap-audit.md  2026-05-16-stage-0d-p-public-docs-github-bootstrap.md  2026-05-16-stage-0d-transcript-alignment-policy.md  2026-05-16-stage-0e-gematria-separators-corpus-candidate.md  2026-05-16-stage-1a-direct-translation-golden-fixtures.md  2026-05-16-stage-1b-atbash-family-golden-fixtures.md  2026-05-16-stage-1c-vigenere-golden-fixtures.md  2026-05-16-stage-1d-p56-prime-stream-golden-fixture.md  2026-05-16-stage-2a-cpu-transform-registry.md  2026-05-16-stage-2b-result-store-foundation.md  2026-05-16-stage-2c-followup-2-remote-ci-verification.md  2026-05-16-stage-2c-followup-3-lock-line-endings.md  2026-05-16-stage-2c-followup-4-public-docs-status.md  2026-05-16-stage-2c-followup-5-remote-blob-consistency.md  2026-05-16-stage-2c-followup-ci-hardening.md  2026-05-16-stage-2c-github-actions-ci.md  2026-05-16-stage-2d-followup-2-readme-nongoals-remote.md  2026-05-16-stage-2d-followup-readme-boundaries.md  2026-05-16-stage-2d-schema-docs-result-hardening.md  2026-05-16-stage-2e-cpu-exploratory-dry-run-planner.md  2026-05-16-stage-2f-bounded-cpu-execution-harness.md  2026-05-16-stage-2g-experiment-proposal-approval-workflow.md  2026-05-16-stage-2h-approval-gated-execution.md  2026-05-16-stage-2i-first-real-proposal-packet.md  2026-05-16-stage-2i-followup-review-usability.md  2026-05-16-stage-2j-bounded-auto-run-policy.md  2026-05-16-stage-3a-caesar-affine-result-summary.md  2026-05-16-stage-3a-minimal-cpu-caesar-affine-executor.md  2026-05-16-stage-3b-result-summary.md  2026-05-16-stage-3b-stage3a-lead-inspection.md  2026-05-16-stage-3c-scoring-calibration-summary.md  2026-05-16-stage-3d-small-vigenere-key-list-summary.md  2026-05-16-stage-3e-method-backlog-ingestion.md  2026-05-16-stage-3e-queue-dry-run-summary.md  2026-05-16-stage-3f-evidence-key-vigenere-pack-summary.md  2026-05-16-stage-3g-p56-local-prime-offset-sweep-summary.md  2026-05-16-stage-3h-negative-control-summary.md  2026-05-16-stage-3h-reset-advance-ablation-summary.md  (+280 more)
schemas/: README.md
scripts/: README.md  bootstrap-windows.ps1  clean-build.ps1  configure-windows.ps1  verify-toolchain.ps1
src/: CMakeLists.txt
src/core/: CMakeLists.txt  build_config.cpp  version.cpp
src/core/include/libreprimus/: build_config.hpp  version.hpp
src/native_cpu/: CMakeLists.txt  hash.cpp  native_batch.cpp  native_cpu_backend_cli.cpp  threading.cpp
src/native_cpu/include/libreprimus/native_cpu/: hash.hpp  native_batch.hpp  threading.hpp
tests/unit/: CMakeLists.txt  smoke_core_test.cpp
tools/: README.md
tutorials/: 00-project-safety-and-provenance.md  01-project-overview.md  01-windows-setup.md  02-linux-setup.md  02-windows-setup.md  03-linux-setup.md  03-repository-tour.md  04-repo-tour.md  04-working-with-local-data.md  05-local-data-policy.md  05-running-workbook-tools.md  06-running-pastebin-tools.md  06-running-tests-and-ci.md  07-running-transcript-alignment.md  07-solved-baselines.md  08-bounded-experiment-queues.md  08-understanding-non-canonical-sources.md  09-generated-output-policy.md  09-github-workflow-for-contributors.md  10-hardware-and-performance.md  10-image-analysis-workflow.md  11-codex-assisted-development.md  11-discord-archive-ingestion.md  12-source-observation-registry.md  13-github-wiki-mirror.md  14-codex-assisted-development.md  15-troubleshooting.md  README.md
website-export/: README.md
(+8486 files in other folders)
