[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "libreprimus-gpu"
version = "0.1.0"
description = "Stage 0A scaffold for a CUDA-accelerated Liber Primus cryptanalysis workbench"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "libreprimus-gpu contributors" }
]
dependencies = [
  "pyyaml",
  "rich",
  "typer",
  "pydantic",
  "jsonschema",
  "orjson",
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "hypothesis",
  "ruff",
  "mypy",
  "pre-commit",
]

[project.scripts]
libreprimus = "libreprimus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["python/libreprimus"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["libreprimus"]
explicit_package_bases = true
mypy_path = ["python"]
